init.html where users can rate books

--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -45,7 +45,7 @@
     <div class="book-container">
         <div class="book">
             <h2>Grokking Algorithms</h2>
-            <img src="{{ url_for('../frontend/static', filename='grok.png') }}" alt="Grokking Algorithms">
+            <img src="{{ url_for('static', filename='grok.png') }}" alt="Grokking Algorithms">
             <p>Author: Aditya Bhargava</p>
             <form class="rating">
                 <label for="rating1">Rate this book:</label>
@@ -60,7 +60,7 @@
         </div>
         <div class="book">
             <h2>The C Programming Language</h2>
-            <img src="{{ url_for('../frontend/static', filename='c.png') }}" alt="The C Programming Language">
+            <img src="{{ url_for('static', filename='c.png') }}" alt="The C Programming Language">
             <p>Authors: Brian Kernighan and Dennis Ritchie</p>
             <form class="rating">
                 <label for="rating2">Rate this book:</label>
@@ -75,7 +75,7 @@
         </div>
         <div class="book">
             <h2>Steppenwolf</h2>
-            <img src="{{ url_for('../frontend/static', filename='Hesse.png') }}" alt="Steppenwolf">
+            <img src="{{ url_for('static', filename='Hesse.png') }}" alt="Steppenwolf">
             <p>Author: Hermann Hesse</p>
             <form class="rating">
                 <label for="rating3">Rate this book:</label>
